<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <AutoCompleteTextView
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="text" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="text" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/national_id"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="text" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_number"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="text" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="text" />

    <CheckBox
        android:text="Express Courier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/expressCourier"
        android:textSize="18sp"
        android:layout_weight="0.05" />

    <Button
        android:text="ADD COURIER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2" />
</LinearLayout>